<resources>
    <string name="app_name">RESTRO</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Login Section-->
    <string-array name="fin_year">
        <item>Select a Fin Year</item>
    </string-array>

    <string-array name="outlet_array">
        <item>Select an Outlet</item>
    </string-array>

    <string-array name="session_array">
        <item>Select a Session</item>
    </string-array>

    <string name="userName">User Name</string>
    <string name="userPassword">Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="or">OR</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgetPwd">\?Forgot Password</string>
    <string name="title_activity_navigator">NavigatorActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Navigation Drawer-->
    <string name="drawer_time">Time will be here</string>
    <string name="drawer_name">Name Here</string>
    <string name="drawer_outlet">Outlet Name</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_logout">Sign Out</string>
    <string name="drawer_sales">Sales</string>
    <string name="drawer_purchase">Purchase</string>
    <string name="drawer_accounts">Accounts</string>
    <string name="drawer_hr">HR</string>
    <string name="drawer_group_chart">Group Chart</string>
    <string name="drawer_instructions">Instruction</string>
    <string name="drawer_work_schedule">Work Schedule</string>
    <string name="drawer_rate_this_app">Rate This App</string>
    <string name="drawer_share_with_friend">Share With Friend</string>
    <string name="drawer_feedback">Feedback</string>

    <!-- Menu Item Strings -->
    <string name="add_item">Add Item</string>
    <string name="update_item">Update</string>
    <string name="table_status">Table Status</string>

    <!-- Order Making Strings -->
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_rate">Rate -</string>
    <string name="recipe_value">Value -</string>
    <string name="recipe_qty">Recipe Qty</string>
    <string name="recipe_remarks">Any remarks? (Optional)</string>

    <!-- GROUP SUB GROUP TYPE SUB TYPE -->
    <string-array name="select_expand">
        <item>Select any one</item>
        <item>Group</item>
        <item>Sub Group</item>
        <item>Type</item>
        <item>Sub Type</item>
    </string-array>

    <string name="group_name">Group(s)</string>
    <string name="sub_group_name">Sub Group(s)</string>
    <string name="type_name">Type(s)</string>
    <string name="sub_type_name">Sub Type(s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Printer sections -->
    <string name="app_title">ePOS2 Printer</string>
    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target</string>
    <string name="title_printerseries">Printer Series</string>
    <string name="title_lang">Lang</string>
    <string name="btn_samplereceipt">Order Receipt</string>
    <string name="btn_samplecoupon">Order Coupon</string>
    <string name="btn_restart">Restart</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Printer List</string>
    <string name="default_target">TCP:192.168.192.168</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="print_job_id">ABC123</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t60">TM-T60 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
</resources>
