<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/login.headerLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@color/headerColor"
            android:gravity="center">

            <ImageView
                android:id="@+id/login.headerLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/header_logo" />

            <TextView
                android:id="@+id/login.headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login.headerLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_header"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/header_text_size" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/login.headerLayout"
            android:layout_marginTop="@dimen/margin_form_section">

            <RelativeLayout
                android:id="@+id/login.formSection"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login.userNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/login.userName"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/editText_height"
                        android:layout_marginTop="@dimen/margin_editText"
                        android:drawableLeft="@drawable/user"
                        android:drawablePadding="@dimen/padding_drawable"
                        android:ems="@integer/editTextEMS"
                        android:hint="User Name"
                        android:imeOptions="actionSearch"
                        android:singleLine="true"
                        android:textSize="@dimen/editTextSize"
                        android:theme="@style/MyEditText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login.passwordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login.userNameLabel"
                    android:layout_centerHorizontal="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/login.password"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/editText_height"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_between_two"
                        android:drawableLeft="@drawable/password"
                        android:drawablePadding="@dimen/padding_drawable"
                        android:ems="@integer/editTextEMS"
                        android:hint="Password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/editTextSize"
                        android:theme="@style/MyEditText" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/login.finYearSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/editText_height"
                    android:layout_alignLeft="@id/login.passwordLabel"
                    android:layout_alignRight="@id/login.passwordLabel"
                    android:layout_below="@id/login.passwordLabel"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_between_two"
                    android:entries="@array/fin_year"
                    android:prompt="@string/app_name"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/login.outletSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/editText_height"
                    android:layout_alignLeft="@id/login.passwordLabel"
                    android:layout_alignRight="@id/login.passwordLabel"
                    android:layout_below="@id/login.finYearSpinner"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_between_two"
                    android:entries="@array/outlet_array"
                    android:prompt="@string/app_name"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/login.sessionSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/editText_height"
                    android:layout_alignLeft="@id/login.passwordLabel"
                    android:layout_alignRight="@id/login.passwordLabel"
                    android:layout_below="@id/login.outletSpinner"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_between_two"
                    android:entries="@array/session_array"
                    android:prompt="@string/app_name"
                    android:spinnerMode="dropdown" />

                <RelativeLayout
                    android:id="@+id/login.buttonSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login.sessionSpinner"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/login.buttonSeparatorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/margin_header"
                        android:text="@string/or"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/buttonTextSize"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/login.loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/login.buttonSeparatorText"
                        android:background="@drawable/login_bg"
                        android:onClick="onLogin"
                        android:text="@string/signIn"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/buttonTextSize" />


                    <Button
                        android:id="@+id/login.registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/login.buttonSeparatorText"
                        android:background="@drawable/registration_bg"
                        android:onClick="onRegister"
                        android:text="@string/signUp"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/buttonTextSize" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/login.rememberForgotSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login.buttonSection"
                    android:layout_marginTop="@dimen/margin_header">

                    <ImageView
                        android:id="@+id/login.viewSection"
                        android:layout_width="@dimen/padding_drawable"
                        android:layout_height="@dimen/padding_drawable"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" />

                    <CheckBox
                        android:id="@+id/login.chkForRemember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/margin_between_two"
                        android:layout_toLeftOf="@id/login.viewSection"
                        android:button="@xml/custom_checkbox"
                        android:checked="false"
                        android:paddingLeft="@dimen/margin_between_two"
                        android:text="@string/rememberMe"
                        android:textColor="@color/headerColor"
                        android:textSize="@dimen/checkboxTextSize" />


                    <TextView
                        android:id="@+id/login.forgetPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/margin_between_two"
                        android:layout_toRightOf="@id/login.viewSection"
                        android:paddingLeft="@dimen/margin_between_two"
                        android:text="@string/forgetPwd"
                        android:textColor="@color/headerColor"
                        android:textSize="@dimen/checkboxTextSize" />

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>